@@ -4,6 +4,7 @@ Morten:
 	* Fix xlsx import of T.INV.
 	* Fix inter-process array paste problem.  [#634]
 	* Fix problem with xlsx number format 14.
+	* Fix problems with complex number rendering.  [#638]
 
 --------------------------------------------------------------------------
 Gnumeric 1.12.52
