@@ -1,3 +1,8 @@
+2022-06-06  Morten Welinder  <terra@gnome.org>
+
+	* src/complex.c (gnm_complex_to_string): Use go_dtoa as building
+	block.  Ensure uppercase "E" in exponential forms.
+
 2022-05-05  Morten Welinder  <terra@gnome.org>
 
 	* src/xml-sax-read.c (xml_cell_set_array_expr): Fix inter-process
